--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build": "webpack",
-    "postinstall": "npm run build",
-    "start": "node webexample.js"
+    "start": "node webexample.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/cmotika/webexample.git"
   },
   "dependencies": {
     "express": "^4.17.1"
